# openespf

./: LICENSE  README.md  condaenv.yml  pyproject.toml  setup.py
examples/: 1-nahe.py  2-acrolein-h2o.py  README.md
examples/data2/: env0.xyz  mol0.xyz
examples/espfmultipoles/: 1-h2o.py
examples/espfmultipoles/1-inputs/: h2o.xml  h2o.xyz
examples/espfmultipoles/1-outputs/: esp-out-axis-0.out  esp-out-axis-1.out  esp-out-axis-2.out  water-esp-error.fig
examples/excitedstates/: 1-acrolein-h2o-tda.py  2-acrolein-droplet-tddft.py  3-acrolein-pbcbox.py  4-methanal-h2o-uks.py  5-methanal-h2o-mf.py
examples/gradients/: 0-dipole-test.py  1-nahe-grad.py  10-acetone-pbcbox.py  11-acetone-h2o-gradqm.py  12a-h2oinh2o-gradmm.py  12b-h2oinh2o-gradqm.py  2-nehe2-grad.py  3-acrolein-h2o-grad.py  4-acrolein-h2o-gradqm.py  5-acrolein-droplet.py  6-acrolein-pbcbox.py  7a-methanal-h2o-gradmm.py  7b-methanal-h2o-gradqm.py  8-methanal-h2o-tdgradmm.py  9-methanal-h2o-tdgradqm.py
examples/gradients/1-inputs/: he_charge.xml
examples/gradients/11-inputs/: acetone-h2o.xyz  acetone-s1-geom2.xyz  acetone-s1.cjson  acetone-s1.xyz
examples/gradients/12-inputs/: h2oqm.xyz  spcfw.xml
examples/moleculardynamics/: 1-acetone-pbcbox-scf-nvt.py
examples/singlepoints/: 1-nahe.py  2-nehe2.py  3-acrolein-h2o.py  4-acrolein-droplet.py  5-acrolein-pbcbox.py  6-methanal-h2o.py  7-nahe-mf.py  8-nehe2-mf.py
logo/: openespf-logo.key
openespf/: Data.py  MMSystem.py  MultipoleForceExtras.py  QMMMSystem.py  QMMultipole.py  QMSystem.py  __init__.py
openespf/data/: scalmini.nw
(+43 files in other folders)
